--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 PasswordManager/.vs/PasswordManager/v16/TestStore/0/054.testlog
 PasswordManager/.vs/PasswordManager/v16/.suo
+PasswordManager/.vs/PasswordManager/v16/TestStore/0/testlog.manifest
