--- a/PasswordManagerAngular/angular.json
+++ b/PasswordManagerAngular/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-jwt-refresh-tokens": {
+    "angular-passwordmanger": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-jwt-refresh-tokens",
+            "outputPath": "dist/angular-passwordmanger",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-jwt-refresh-tokens:build"
+            "browserTarget": "angular-passwordmanger:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-jwt-refresh-tokens:build:production"
+              "browserTarget": "angular-passwordmanger:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-jwt-refresh-tokens:build"
+            "browserTarget": "angular-passwordmanger:build"
           }
         },
         "test": {
@@ -116,15 +116,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-jwt-refresh-tokens:serve"
+            "devServerTarget": "angular-passwordmanger:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-jwt-refresh-tokens:serve:production"
+              "devServerTarget": "angular-passwordmanger:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "angular-jwt-refresh-tokens"
+  "defaultProject": "angular-passwordmanger"
 }
